# SoToSpeak

./: .env.example  .gitignore  README.md  docker-compose.yml  install.sh  run.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  engine.py  jobs.py  main.py  schemas.py  scoring.py  vocab.py
backend/app/routers/: audio.py  jobs.py
backend/scripts/: smoke.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AxisConfig.tsx  GenerationSettings.tsx  GridPanel.tsx  GridSelector.tsx  HelpTip.tsx  PlayerBar.tsx  ProgressCard.tsx  TextPanel.tsx  VoicePanel.tsx
frontend/src/components/ui/: card.tsx  progress.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx
frontend/src/lib/: color.ts
frontend/src/state/: store.ts
legacy/: LEGACY_NOTE.md
