[project]
name = "sotospeak-backend"
version = "0.1.0"
description = "So-to-Speak 2.0 backend — OmniVoice TTS control-space explorer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "omnivoice",
    "torch",
    "torchaudio",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "python-multipart",
    "numpy",
    "soundfile",
    "librosa",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
